@@ -1,3 +1,9 @@
+2008-04-13  Bradley M. Kuhn  <bkuhn@ebb.org>
+
+	* tests/test-pokeravatar.py.in
+	(PokerAvatarTestCase.test61_tableCreateFails): Wrote function.
+	(PokerAvatarTestCase.createTableForceFail): Wrote function.
+
 2008-04-10  Bradley M. Kuhn  <bkuhn@ebb.org>
 
 	* tests/test-pokeravatar.py.in
